# TicketShredder

./: .cursorignore  .gitignore  AGENTS.md  HELMSMAN.md  README.md  jot.md  pyproject.toml
.scratch/.itickets/auto/: refactor-src-tests.md  write-file-hello.md  write-goodbye-world.md
hDocs/: glossary.md  master.md  overlay.md  questions.md  status.md  wants.md
src/ticket_shredder/: __main__.py  agent_runner.py  controller.py  desktop.py  git_service.py  github_service.py  gui.py  layout.py  model.py  paths.py  windows_console.py
tests/: test_desktop.py  test_goodbye_world.py  test_hello_goodbye.py  test_hello_world.py  test_services.py  test_windows_console.py
ticket_shredder/: __init__.py  __main__.py  agent_runner.py  controller.py  git_service.py  gui.py  model.py
